# smcli

./: Cargo.toml  README.md
src/: credential.rs  main.rs  smcli.yaml  timetable.rs
