[package]
name = "smcli"
version = "0.1.0"
authors = ["sp1rit <sp1rit@disroot.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libschulmanager = { path = "../libschulmanager", features = ["smartv1", "smartv2", "microsoft"] }
tokio = { version = "0.2", features = ["full"] }
clap = {version = "2.33", features = ["yaml"]}
serde = { version = "1.0"}
serde_yaml = "0.8"
serde_json = "1.0"
chrono = { version = "0.4" }
keytar = "0.1.3"
directories = "3.0"
